# ACKrail

./: BUSINESS.md  README.md  RULE.md  TODO
srcs/: CMakeLists.txt  Makefile  README.md  main.cpp
srcs/DesignPatter/: IndexedRandomPool.hpp  IndexedRandomPoolTest.cpp
srcs/algorithm/: Dijkstra.cpp  Dijkstra.hpp  DijkstraTest.cpp  Route.cpp  Route.hpp  RouteFinder.cpp  RouteFinder.hpp  RouteFinderTest.cpp  StaticRouteCostMatrix.cpp  StaticRouteCostMatrix.hpp
srcs/engin/: Biplace.cpp  Biplace.hpp  Engine.cpp  Engine.hpp  EngineFactory.cpp  EngineFactory.hpp
srcs/garage/: Garage.cpp  Garage.hpp
srcs/garage/engine/: Biplace.cpp  Biplace.hpp  Engine.cpp  Engine.hpp  EngineFactory.cpp  EngineFactory.hpp  EnginePad.cpp  EnginePad.hpp  EngineTest.cpp
srcs/geography/: Geography.cpp  Geography.hpp  Point.cpp  Point.hpp
srcs/map/: paris_metro.json  paris_metro_evening_weights.json  paris_metro_morning_weights.json
srcs/scripts/: import_idfm_gtfs.py  setup-ubuntu.sh
srcs/simulator/: NodeController.cpp  NodeController.hpp  PassengerDispatcher.cpp  PassengerDispatcher.hpp  SimulationSession.cpp  SimulationSession.hpp  TrafficBalancer.cpp  TrafficBalancer.hpp  TrafficData.cpp  TrafficData.hpp  TrafficEventManager.cpp  TrafficEventManager.hpp  TrafficGenerator.cpp  TrafficGenerator.hpp  TrafficManager.cpp  TrafficManager.hpp  TrafficManagerTest.cpp  TrafficOperations.cpp  TrafficOperations.hpp  TrafficPassenger.cpp  TrafficPassenger.hpp  TrafficResults.hpp  TrafficRouteManager.cpp  TrafficRouteManager.hpp  TrafficSimulator.cpp  TrafficSimulator.hpp
srcs/statistics/: EngineStatistics.cpp  EngineStatistics.hpp  NumericSummary.hpp  SimulationStatistics.cpp  SimulationStatistics.hpp  SimulationStatisticsCollector.cpp  SimulationStatisticsCollector.hpp  StationStatistics.cpp  StationStatistics.hpp
srcs/statistics/helper/: CompletedTrip.hpp  EngineReport.hpp  NumericSummary.cpp  StationReport.hpp  StationsGlobalReport.hpp
srcs/topology/: Link.cpp  Link.hpp  MapViewport.cpp  MapViewport.hpp  Node.cpp  Node.hpp  Topology.cpp  Topology.hpp  TopologyWidget.cpp  TopologyWidget.hpp
srcs/topology/shaders/: engine.frag  engine.vert  node.frag  node.vert
srcs/topology/widgets/: EngineRenderer.cpp  EngineRenderer.hpp  EngineWidget.cpp  EngineWidget.hpp  HeaderWidget.cpp  HeaderWidget.hpp  LinkRenderer.hpp  LinkWidget.cpp  LinkWidget.hpp  MapCamera.cpp  MapCamera.hpp  MapWidget.cpp  MapWidget.hpp  NodeRenderer.hpp  NodeWidget.cpp  NodeWidget.hpp
srcs/view/: AckRailWindow.cpp  AckRailWindow.hpp  SimulationController.cpp  SimulationController.hpp  SimulationWidget.cpp  SimulationWidget.hpp  TopologyWidget.cpp  TopologyWidget.hpp
srcs/view/dialogs/: SimulationConfigDialog.cpp  SimulationConfigDialog.hpp  StatisticsDialog.cpp  StatisticsDialog.hpp
srcs/view/helper/: MapCamera.hpp  MapViewport.cpp  MapViewport.hpp
srcs/view/shaders/: engine.vert  link.vert
srcs/view/simulation/: EmptyPageWidget.hpp  SimulationWidget.cpp  SimulationWidget.hpp
srcs/view/simulation/engine/: EngineRenderer.hpp
srcs/view/simulation/header/: HeaderWidget.cpp  HeaderWidget.hpp
srcs/view/simulation/map/: MapWidget.cpp  MapWidget.hpp
srcs/view/simulation/topology/: LinkRenderer.hpp  NodeRenderer.hpp
srcs/view/statistics/: DispatchStatisticsWidget.cpp  DispatchStatisticsWidget.hpp  EngineStatisticsWidget.cpp  EngineStatisticsWidget.hpp  GlobalStationStatisticsWidget.cpp  GlobalStationStatisticsWidget.hpp  StationStatisticsWidget.cpp  StationStatisticsWidget.hpp
srcs/view/widgets/: EmptyPageWidget.cpp  EngineRenderer.cpp  EngineRenderer.hpp  HeaderWidget.cpp  HeaderWidget.hpp  LinkRenderer.cpp  LinkRenderer.hpp  MapWidget.cpp  MapWidget.hpp  NodeRenderer.cpp  NodeRenderer.hpp
